[tool.poetry]
name = "dbt-diagrams"
version = "0.1.0"
description = "Add Mermaid rendering and model docs based ERDs to your dbt docs"
authors = ["Diederik Jan Lemkes <dj.lemkes@gmail.com>"]
homepage = "https://github.com/DJLemkes/dbt-diagrams"
repository = "https://github.com/DJLemkes/dbt-diagrams"
license = "MIT"
readme = "README.md"
packages = [{ include = "dbt_diagrams" }]
include = ["resources/**"]

[tool.poetry.scripts]
dbt-diagrams = "dbt_diagrams.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "8.1.3"
pyyaml = ">=6.0"
playwright = "1.32.1"
pydantic = "1.10.7"

fastapi = { version = "0.95.1", optional = true }
uvicorn = { extras = ["standard"], version = "0.22.0", optional = true }
python-multipart = { version = "0.0.6", optional = true }

[tool.poetry.extras]
rest_api = ["fastapi", "uvicorn", "python-multipart"]
all = ["rest_api"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
types-pyyaml = "^6.0.12.11"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = ".*\\.pyi?$|tests\\/.*\\.pyi?$"

[tool.ruff]
line-length = 100

[tool.mypy]
files = "dbt_diagrams/**/*.py"
warn_return_any = true
warn_unused_configs = true
