[tool.poetry]
name = "dbt-diagrams"
version = "0.0.0" # This is dynamically set by poetry-dynamic-versioning
description = "Add Mermaid rendering and model docs based ERDs to your dbt docs"
authors = ["Diederik Jan Lemkes <dj.lemkes@gmail.com>"]
homepage = "https://github.com/DJLemkes/dbt-diagrams"
repository = "https://github.com/DJLemkes/dbt-diagrams"
license = "MIT"
readme = "README.md"
packages = [{ include = "dbt_diagrams" }]
include = ["resources/**"]

[tool.poetry.scripts]
dbt-diagrams = "dbt_diagrams.cli:cli"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "8.1.3"
pyyaml = ">=6.0"
pydantic = ">=2,<3"

playwright = { version = "1.40.0", optional = true }
fastapi = { version = "0.105.0", optional = true }
uvicorn = { extras = ["standard"], version = "0.24.0", optional = true }
python-multipart = { version = "0.0.6", optional = true }

[tool.poetry.extras]
rest_api = ["fastapi", "uvicorn", "python-multipart"]
svg = ["playwright"]
all = ["rest_api", "svg"]

[tool.poetry.group.dev.dependencies]
dbt-core = "<2"
dbt-duckdb = "<2"
ruff = "^0.1.8"
mypy = "^1.2.0"
pytest = "^7.3.1"
types-pyyaml = "^6.0.12.11"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.ruff]
line-length = 100

[tool.mypy]
files = "dbt_diagrams/**/*.py"
warn_return_any = true
warn_unused_configs = true
